@@ -4973,10 +4973,10 @@
 14584,Red_Butterfly_Wing,Red Butterfly Wing,2,,,10,,,,,0xFFFFFFFF,7,2,,,,,,{ callfunc "F_CashCity",3; },{},{}
 14585,Blue_Butterfly_Wing,Blue Butterfly Wing,2,,,10,,,,,0xFFFFFFFF,7,2,,,,,,{ callfunc "F_CashCity",4; },{},{}
 14586,Jumping_Candy,Jumping candy,2,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{},{},{}
-14587,Equipment_Repair_Book,Equipment Repair Book,2,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{ itemskill "BS_REPAIRWEAPON",1; },{},{}
-14588,Party_Blessing_Scroll,Party Blessing Scroll,2,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{},{},{}
-14589,Party_Increase_Agility_Scroll,Party Increase AGI Scroll,2,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{},{},{}
-14590,Party_Assumptio_Scroll,Party Assumtio Scroll,2,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{},{},{}
+14587,Equipment_Repair_Book,Equipment Repair Book,11,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{ itemskill "BS_REPAIRWEAPON",1; },{},{}
+14588,Party_Blessing_Scroll,Party Blessing Scroll,11,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{ itemskill "CASH_BLESSING",10; },{},{}
+14589,Party_Increase_Agility_Scroll,Party Increase AGI Scroll,11,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{ itemskill "CASH_INCAGI",10; },{},{}
+14590,Party_Assumptio_Scroll,Party Assumtio Scroll,11,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{ itemskill "CASH_ASSUMPTIO",10; },{},{}
 14591,Seige_Tele_Scroll,Seige Teleport Scroll,2,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{ callfunc "F_CashSeigeTele"; },{},{}
 // Should increase job EXP only.
 14592,JOB_Battle_Manual,JOB Battle Manual,2,2,,10,,,,,0xFFFFFFFF,7,2,,,,,,{ sc_start SC_EXPBOOST,1800000,50; },{},{}
