@@ -630,9 +630,9 @@
 
 // Additional Skill (??)
 //688,0,0,0,0,0,0,9,0,no,0,0,0,none,0,		GM_SANDMAN,GM Sandman
-//689,0,0,0,0,0,0,9,0,no,0,0,0,none,0,		CASH_BLESSING,Blessing
-//690,0,0,0,0,0,0,9,0,no,0,0,0,none,0,		CASH_INCAGI,Increase Agi
-//691,0,0,0,0,0,0,9,0,no,0,0,0,none,0,		CASH_ASSUMPTIO,Assumpito
+689,0,6,4,0,0x3,-1,10,1,yes,0,0,0,magic,0,	CASH_BLESSING,Party Blessing
+690,0,6,4,0,0x3,-1,10,1,yes,0,0,0,magic,0,	CASH_INCAGI,Party Increase AGI
+691,0,6,4,0,0x3,-1,5,1,yes,0,0,0,magic,0,	CASH_ASSUMPTIO,Party Assumptio
 //692,0,0,0,0,0,0,9,0,no,0,0,0,none,0,		ALL_CATCRY,Cat Cry
 //693,0,0,0,0,0,0,9,0,no,0,0,0,none,0,		ALL_PARTYFLEE,Party Flee
 //694,0,0,0,0,0,0,9,0,no,0,0,0,none,0,		ALL_ANGEL_PROTECT,Angel's Protection
