@@ -30,6 +30,7 @@
 362,4	//HP_BASILICA
 395,4	//CG_MOONLIT
 491,4	//CR_CULTIVATION
+691,4;	//CASH_ASSUMPITO
 
 //BATTLEGROUND
 26,8	//AL_TELEPORT
@@ -56,6 +57,7 @@
 438,8	//SG_SUN_BLESS
 439,8	//SG_MOON_BLESS
 440,8	//SG_STAR_BLESS
+691,8;	//CASH_ASSUMPITO
 
 //mixed
 488,3	//CG_HERMODE
